--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -21,7 +21,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/background" />
+        android:src="@drawable/background"
+        android:contentDescription="none" />
 
     <Button
         android:id="@+id/_buttonNewGame"
