--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/blue_button"
+        android:background="@drawable/button_selector"
         android:text="New game"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/_buttonResume"
@@ -26,7 +26,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/blue_button"
+        android:background="@drawable/button_selector"
         android:text="Tutorial"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/_buttonNewGame"
@@ -42,7 +42,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/blue_button"
+        android:background="@drawable/button_selector"
         android:text="Exit"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/_buttonTutorial"
@@ -57,7 +57,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/blue_button"
+        android:background="@drawable/button_selector"
         android:text="Resume"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline2"
